--- a/phone/css/nomq_preview_master_a-master.css
+++ b/phone/css/nomq_preview_master_a-master.css
@@ -1,1 +1,1 @@
-#u16167{border-width:0px;border-color:transparent;background-color:transparent;max-width:100000px;}#u11103,#u11132{background-color:#000000;}#u11122-4{background-color:transparent;font-size:9px;color:#FFFFFF;letter-spacing:3px;text-transform:uppercase;text-align:center;line-height:11px;font-family:dosis, sans-serif;font-weight:300;}#u11104,#u11125{background-color:transparent;}
+/* empty css file */
